--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.1",
+    "mongoose": "^6.2.2",
+    "morgan": "^1.10.0",
     "node-fetch": "2.6.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
