--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -1,14 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-my-app/dist
-my-app/tmp
-my-app/out-tsc
-my-app/bazel-out
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
 # Node
-node_modules
-/my-app/node_modules
 /node_modules
 npm-debug.log
 yarn-error.log
