--- a/manifest.yml
+++ b/manifest.yml
@@ -18,7 +18,7 @@ spec:
         app: angular-webapp
     spec:
       containers:
-      - image: docker.io/andraide/angular-node-webapp
+      - image: docker.io/andraide/testtwo
         name: webapp
         imagePullPolicy: Always
         resources: {}
