--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node-fetch": "2.6.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.16.1"
+    "sequelize": "^6.16.1",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "jest": "^27.5.1",
