--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,20 +5,15 @@ upstream node-service{
 
 server {
     listen       8080;
-    server_name  localhost;
+    server_name localhost;
+   
     location / {
-         root   /usr/share/nginx/html;
-         index  index.html index.html;
+        root /usr/share/nginx/html;
+        index  index.html; 
+        try_files $uri $uri/ /index.html?$query_string;
     }
-
-
+    
     location /api {
         proxy_pass http://node-service;
-    }
-
-
-    error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-        root   /usr/share/nginx/html;
     }
 }
